Tried fixing scrollbar on form

--- a/src/brew-monitor.Frontend/src/app/brew-list/brew-form/brew-form.component.scss
+++ b/src/brew-monitor.Frontend/src/app/brew-list/brew-form/brew-form.component.scss
@@ -7,7 +7,6 @@
   background-color: white;
   border: 1px solid gray;
   border-radius: 3px;
-  position: relative;
   overflow: auto;
 
   .header {
@@ -58,7 +57,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100%);
+    height: 100%;
     justify-content: center;
 
     .details {
@@ -122,7 +121,7 @@
       background-color: rgb(166, 240, 166);
       border: none;
       outline: none;
-      height: calc(var(--grid) * 9);
+      height: calc(var(--grid) * 10);
       width: calc(var(--grid) * 35);
       margin: calc(var(--grid) * 6) 0 auto auto;
       font-size: 18px;
